infrastructure/dev/patches/auth-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: auth-ingress
  namespace: spezistudyplatform
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
spec:
  routes:
    - kind: Rule
      match: Host(`localhost`) && PathPrefix(`/auth`)
      priority: 99
      services:
        - name: keycloak
          port: 80
      middlewares:
        - name: keycloak-headers
