infrastructure/dev/patches/main-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: spezistudyplatform-ingress
  namespace: spezistudyplatform
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
spec:
  routes:
    - kind: Rule
      match: Host(`localhost`)
      priority: 1
      services:
        - name: spezistudyplatform-web-service
          port: 80
      middlewares:
        - name: security-headers
    - kind: Rule
      match: Host(`localhost`) && PathPrefix(`/api`)
      priority: 2
      services:
        - name: spezistudyplatform-server-service
          port: 8080
      middlewares:
        - name: security-headers
